--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
+    "react-type-animation": "^2.1.0",
     "react-vertical-timeline-component": "^3.5.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
